New version of copos 0.8 see ChangeLog

--- a/copos/NEWS
+++ b/copos/NEWS
@@ -1,2 +1,6 @@
+Monday 17 october 2005
+New version 0.8.0 of COPOS
+No need webcam any more, copos use only video file with ffmpeg
+
 Wednesday 01 september 2004
 Released 0.7.0 of COPOS to the public
