--- a/copos/po/fr_FR.po
+++ b/copos/po/fr_FR.po
@@ -1,237 +1,288 @@
-# French translations for PACKAGE package
-# Traduction anglaise du package PACKAGE.
-# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# Ronan Billon <cirdan@mail.berlios.de>, 2004.
+# French translations for copos package
+# Traduction anglaise du package copos.
+# Copyright (C) 2005 THE copos'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the copos package.
+# Ronan Billon <cirdan@mail.berlios.de>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: copos 0.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-31 13:10+0200\n"
-"PO-Revision-Date: 2004-08-31 13:10+0200\n"
+"POT-Creation-Date: 2005-10-17 18:52+0200\n"
+"PO-Revision-Date: 2005-10-17 18:16+0200\n"
 "Last-Translator: Ronan Billon <cirdan@mail.berlios.de>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: display/visualization.c:404
+#. Code
+#: display/visualization.c:251
+msgid "Save File"
+msgstr "Enregistrer le fichier"
+
+#: display/visualization.c:405
 msgid "Visualization"
-msgstr ""
+msgstr "Visualisation"
 
-#: display/generate.c:159
-msgid "Analyze"
-msgstr ""
+#: display/generate.c:142
+msgid "Computation"
+msgstr "Calcul"
 
-#: display/generate.c:169
-msgid "Analyze each image"
-msgstr ""
+#: display/generate.c:153
+msgid "Analyse each picture"
+msgstr "Analyse des images"
 
-#: display/generate.c:221
+#: display/generate.c:213
 msgid "Please, add a value greater than 0.0"
-msgstr ""
+msgstr "S'il vous plait, ajouter une valeur supérieur à 0.0"
 
-#: display/generate.c:250
-msgid "Normalize the points. That can take time (and freeze the application)"
-msgstr ""
-
-#: display/generate.c:416
+#: display/generate.c:387
 msgid ""
-"Check that the centre of rotation (symbolized by the white line) is "
-"correctly positioned. \n"
-"If it is not the case, start again the preceding stage. "
+"<b>Check</b> that the centre of rotation (symbolized by the white line)\n"
+"is correctly positioned. \n"
+"If it is not the case, start again the preceding stage."
 msgstr ""
+"<b>Controlez</b> que le centre de rotation (symboliser par la ligne "
+"blanche)\n"
+"est correctement positionner.\n"
+"Si ce n'est pas le cas, recommencez l'étape précédente."
 
-#: display/generate.c:443
-msgid "Navigate"
-msgstr ""
-
-#: display/generate.c:470
+#: display/generate.c:403
 msgid "Rotation of the object (in degree)"
+msgstr "Angle de rotation de l'objet (en degrée)"
+
+#: display/generate.c:412
+msgid "Translation of the object (in centimeter)"
+msgstr "Translation de l'objet (en centimètre)"
+
+#: display/generate.c:420 display/generate.c:427
+msgid " : "
+msgstr " : "
+
+#: display/generate.c:439 display/generate.c:446
+msgid "0.0"
 msgstr ""
 
-#: display/generate.c:478
-msgid "Translation of the object"
-msgstr ""
-
-#: display/generate.c:520 display/generate.c:546
+#: display/generate.c:479
 msgid "Generate"
-msgstr ""
+msgstr "Générer"
 
 #: display/positions.c:58
 msgid "Add the value of the distance between webcam and the laser pointer\n"
 msgstr ""
+"Ajoutez la valeur de la distance entre la webcam et le pointeur laser\n"
 
-#: display/positions.c:124
+#: display/positions.c:65
+msgid ""
+"Add the value of the distance between the departure of the laser and the "
+"table\n"
+msgstr "Ajouter la valeur de la distance entre le laser et la table\n"
+
+#: display/positions.c:72
+msgid "Add the value of the focal distance of the  webcam\n"
+msgstr "Ajouter la valeur de la distance focale de la webcam\n"
+
+#: display/positions.c:80
+msgid "Add the value of the angle formed by the webcam\n"
+msgstr "Ajouter la valeur de l'angle former par la webcam\n"
+
+#: display/positions.c:142
 msgid ""
 "Check your values,\n"
-"There's a problem during the compute"
+"There's a problem during the computation"
 msgstr ""
+"Contrôlez vos valeurs,\n"
+"Il y a un problème lors du calcul"
 
-#: display/positions.c:237
-msgid "The focal distance of the webcam (in pixels, see documentations) "
+#: display/positions.c:250
+msgid ""
+"The focal distance of the webcam (in pixels, see documentations)\n"
+"300~500 are good values "
 msgstr ""
+"La distance focale de la webcam (en pixels, voir la documentations)\n"
+"300~500 sont des valeurs acceptables"
 
-#: display/positions.c:244
-msgid "Distance between the webcam and the laser pointer"
+#: display/positions.c:257
+msgid ""
+"Distance between the webcam and the laser pointer (in centimeter)\n"
+"10~30 are good values"
 msgstr ""
+"La distance entre la webcam et le pointeur laser (en centimètre)\n"
+"10~30 sont des valeurs acceptables"
 
-#: display/positions.c:251
-msgid "The angle formed by the webcam "
+#: display/positions.c:264
+msgid ""
+"The angle formed by the webcam (in degree)\n"
+"20~60 are good values"
 msgstr ""
+"L'angle formé par la webcam (en degrée)\n"
+"20~60 sont des valeurs acceptables"
 
-#: display/positions.c:258
-msgid "Distance between the departure of the laser and the table "
+#: display/positions.c:271
+msgid ""
+"Distance between the departure of the laser and the table (in centimeter)\n"
+"10~60 are good values"
 msgstr ""
+"La distance entre la début du laser et la table (en centimètre)\n"
+"10~60 sont des valeurs acceptables"
 
-#: display/positions.c:271 display/picklaser.c:639 display/recorder.c:391
-#: display/choosedevice.c:271 display/introduction.c:177
-msgid "Next >"
-msgstr ""
-
-#: display/positions.c:284
+#: display/positions.c:297
 msgid "Set the positions"
-msgstr ""
+msgstr "Fixer les positions"
 
-#: display/picklaser.c:521
+#: display/picklaser.c:480
 msgid "Scale : "
-msgstr ""
+msgstr "Échelle : "
 
-#: display/picklaser.c:548
+#: display/picklaser.c:507
 msgid "Number of points : "
-msgstr ""
+msgstr "Nombre de points : "
 
-#: display/picklaser.c:552 display/recorder.c:367 display/recorder.c:374
+#: display/picklaser.c:511
 msgid "0"
-msgstr ""
+msgstr "0"
 
-#: display/picklaser.c:569
-msgid "Red : "
-msgstr ""
+#: display/picklaser.c:528
+msgid "Red"
+msgstr "Rouge"
 
-#: display/picklaser.c:576
-msgid "Green : "
-msgstr ""
+#: display/picklaser.c:535
+msgid "Green "
+msgstr "Vert"
 
-#: display/picklaser.c:583
-msgid "Blue : "
-msgstr ""
+#: display/picklaser.c:542
+msgid "Blue"
+msgstr "Bleu"
+
+#: display/picklaser.c:549 display/picklaser.c:556 display/picklaser.c:563
+#: display/choosefile.c:268 display/choosefile.c:289 display/choosefile.c:310
+msgid ":"
+msgstr ":"
+
+#: display/picklaser.c:608
+msgid "Picker"
+msgstr "Pipette"
+
+#: display/picklaser.c:620
+msgid "Eliminate outlayers"
+msgstr "Élimine les points hors normes"
 
 #: display/picklaser.c:625
-msgid "Pick"
-msgstr ""
+msgid "Smooth"
+msgstr "Lissage"
 
-#: display/picklaser.c:689
+#: display/picklaser.c:693
 msgid "Pick the laser"
+msgstr "Capture du laser"
+
+#: display/choosefile.c:88
+msgid "Open File"
+msgstr "Ouvrir le fichier"
+
+#: display/choosefile.c:226
+msgid "Browse..."
+msgstr "Parcourir..."
+
+#: display/choosefile.c:232
+msgid "<b>Choose video file</b>"
+msgstr "<b>Choix du fichier vidéo</b>"
+
+#: display/choosefile.c:254
+msgid "Size"
+msgstr "Taille"
+
+#: display/choosefile.c:261
+msgid "Number of images"
+msgstr "Nombre d'images"
+
+#: display/choosefile.c:296
+msgid "Video"
+msgstr "Vidéo"
+
+#: display/choosefile.c:317
+msgid "<b>Video informations</b>"
+msgstr "<b>Informations de la vidéo</b>"
+
+#: display/choosefile.c:332
+msgid "Change the orientation"
+msgstr "Changement d'orientation"
+
+#: display/choosefile.c:337
+msgid "<b>Orientation</b>"
 msgstr ""
 
-#: display/recorder.c:131
-msgid "Couldn't stop the function recorder_update_image"
-msgstr ""
+#: display/choosefile.c:372
+msgid "Choose File"
+msgstr "Choix du fichier"
 
-#: display/recorder.c:161
-msgid "Couldn't stop the function recorder_store_image"
-msgstr ""
-
-#: display/recorder.c:187 display/recorder.c:242 display/choosedevice.c:98
-#: display/choosedevice.c:141 display/choosedevice.c:185
-msgid "Couldn't stop the function update_image"
-msgstr ""
-
-#: display/recorder.c:325 display/recorder.c:409
-msgid "Record"
-msgstr ""
-
-#: display/recorder.c:330
-msgid "Stop"
-msgstr ""
-
-#: display/recorder.c:345
-msgid "secondes (recording time)"
-msgstr ""
-
-#: display/recorder.c:353
-msgid "Number of frames per seconds :"
-msgstr ""
-
-#: display/recorder.c:360
-msgid "Number of recorded frames : "
-msgstr ""
-
-#: display/choosemodule.c:25
-msgid "getWebcam is not provided in the module"
-msgstr ""
-
-#: display/choosemodule.c:34
-msgid "Impossible to initialize the webcam"
-msgstr ""
-
-#: display/choosemodule.c:40
-msgid "Impossible to use the webcam"
-msgstr ""
-
-#: display/choosemodule.c:130
-msgid "Select the device"
-msgstr ""
-
-#: display/choosemodule.c:166
-msgid "Browse"
-msgstr ""
-
-#: display/choosemodule.c:170
-msgid "Device : "
-msgstr ""
-
-#: display/choosemodule.c:177
-msgid "Module : "
-msgstr ""
-
-#: display/choosemodule.c:211
-msgid "Error during the selection"
-msgstr ""
-
-#: display/choosemodule.c:252
-msgid "getGtkConf is not provided in the module"
-msgstr ""
-
-#: display/choosedevice.c:102
-msgid "Beware no webcam selected"
-msgstr ""
-
-#: display/choosedevice.c:251
-msgid "Device..."
-msgstr ""
-
-#: display/choosedevice.c:256
-msgid "Configuration..."
-msgstr ""
-
-#: display/choosedevice.c:290
-msgid "Choose device"
-msgstr ""
-
-#: display/introduction.c:53
+#: display/introduction.c:44
 msgid "The cheapest 3D Scanner !\n"
-msgstr ""
+msgstr "Le scanner 3D le moins cher !\n"
 
-#: display/introduction.c:185
+#: display/introduction.c:45
+msgid ""
+"The next steps are :\n"
+"-Choose a video file\n"
+"-Select the laser on picture\n"
+"-Enter the position of each piece in the real world\n"
+"-Check out if these values are correct\n"
+"-Enter the last value and generate the cloud of points\n"
+"-Visualize the result and save it\n"
+"\n"
+"Ok now, click on the forward button"
+msgstr ""
+"Les prochaines étapes sont :\n"
+"-Choisir le fichier vidéo\n"
+"-Sélectionner la trace du laser sur l'image\n"
+"-Fixer les positions des éléments du monde réel\n"
+"-Contrôler les valeurs\n"
+"-Fixer la dernière valeur et générer le nuage de points\n"
+"-Visualiser le résultat et l'enregistrer\n"
+"\n"
+"Ok maintenant, cliquer sur le bouton suivant"
+
+#: display/introduction.c:182
 msgid "Introduction"
-msgstr ""
+msgstr "Introduction"
 
-#: display/mainwindow.c:99
-msgid "Copos"
-msgstr ""
+#: display/mainwindow.c:42
+msgid "About COPOS"
+msgstr "À propos de COPOS"
 
-#: display/mainwindow.c:110
+#: display/mainwindow.c:57
+msgid ""
+"<b>COPOS</b>\n"
+"An analyser of video file to make a cloud of 3D points"
+msgstr ""
+"<b>COPOS</b>\n"
+"Un analyseur de vidéo pour fabriquer un nuage de points"
+
+#: display/mainwindow.c:73
+msgid ""
+"Version: 0.8:q\n"
+"Author: Ronan Billon <cirdan@mail.berlios.de>\n"
+"License: GNU General Public License\n"
+"Homepage: http://copos.berlios.de"
+msgstr ""
+"Version : 0.8:q\n"
+"Auteur : Ronan Billon <cirdan@mail.berlios.de>\n"
+"Licence : GNU General Public License\n"
+"Page web : http://copos.berlios.de"
+
+#: display/mainwindow.c:140
+msgid "copos"
+msgstr "copos"
+
+#: display/mainwindow.c:151
 msgid "_File"
-msgstr ""
+msgstr "_Fichier"
 
-#: display/mainwindow.c:130
+#: display/mainwindow.c:171
 msgid "_Help"
-msgstr ""
+msgstr "_Aide"
 
-#: display/mainwindow.c:137
+#: display/mainwindow.c:178
 msgid "_About"
-msgstr ""
+msgstr "À _propos"
