Correct few errors

--- a/copos/po/fr_FR.po
+++ b/copos/po/fr_FR.po
@@ -266,7 +266,7 @@ msgid ""
 "License: GNU General Public License\n"
 "Homepage: http://copos.berlios.de"
 msgstr ""
-"Version : 0.8:q\n"
+"Version : 0.8\n"
 "Auteur : Ronan Billon <cirdan@mail.berlios.de>\n"
 "Licence : GNU General Public License\n"
 "Page web : http://copos.berlios.de"
